--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <input type="number" id="guess" min="0" max="1000" placeholder="0–1000">
-<Button>Submit guess </Button>
+<Button>Submit Guess </Button>
 <Button>Retry</Button>
 <Button>Give up</Button>
 <Button>Reset all</Button>
