--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
   <p>Computer picks a secret number from 0 to 1,000. Enter Guess; you'll get higher lower hints until correct, Bonus Hint: even/odd.</p>
 </div>
 
+
+<div class="BB">
 <input type="number" id="guess" min="0" max="1000" placeholder="0–1000">
 <Button>Submit Guess </Button>
 <Button>Retry</Button>
 <Button>Give up</Button>
 <Button>Reset all</Button>
+</div>
 
 <div class="big" id="card">
           <div class="confetti" id="confetti" aria-hidden="true"></div>
