--- a/index.html
+++ b/index.html
@@ -34,6 +34,44 @@
 
 </div>
 
+
+<div class="MArk">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Eo_circle_green_checkmark.svg/2048px-Eo_circle_green_checkmark.svg.png" alt="checkbox" width="30">
+</div>
+
+
+<div class="AArk">
+<img src="https://png.pngtree.com/png-vector/20230904/ourmid/pngtree-fail-stamp-grungy-png-image_9932568.png" alt="checkbox" width="80">
+</div>
+
+
+<div class="KKrk">
+<img src="https://png.pngtree.com/png-vector/20240827/ourmid/pngtree-realistic-3d-fire-flame-effect-for-designs-png-image_13631567.png" alt="checkbox" width="80">
+</div>
+
+
+
+
+<div class="LLrk">
+<img src="https://static.thenounproject.com/png/1921206-200.png" alt="checkbox" width="50">
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="score" aria-live="polite">
           <div class="chip"><b>Wins</b><div class="val" id="wins">0</div></div>
           <div class="chip"><b>Losses</b><div class="val" id="losses">0</div></div>
@@ -45,6 +83,7 @@
 
 <aside class="panel" aria-live="polite">
         <div class="result" id="resultBox">
+
           <div class="img pop" id="resultImg" aria-hidden="true"><svg viewBox="0 0 128 128" width="86" height="86"><defs><radialGradient id="g" cx="50%" cy="40%" r="60%"><stop offset="0%" stop-color="#6ee7ff"></stop><stop offset="100%" stop-color="#6ee7ff" stop-opacity="0"></stop></radialGradient></defs><rect width="128" height="128" rx="24" fill="#08142d"></rect><circle cx="64" cy="64" r="52" fill="url(#g)"></circle><path d="M64 24l7 18 19 4-15 12 4 20-15-11-15 11 4-20-15-12 19-4z" fill="#a78bfa"></path></svg></div>
           <div>
             <div id="resultText">Enter a number to begin!</div>
