--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Even-or-Odd Guess (0–1000)</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/js" href="style.js">
 
 </head>
 <body>
@@ -68,5 +69,6 @@ height="50">
 
 
   </main>
+   <script src="script.js"></script>
 </body>
 </html>
